fix: CSS - scrollbar apparence

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -239,6 +239,52 @@ markdown th {
     color: #000000;
 }
 
+::-webkit-scrollbar {
+    height: 1rem;
+    width: .5rem
+}
+
+::-webkit-scrollbar:horizontal {
+    height: .5rem;
+    width: 1rem
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 9999px
+}
+
+::-webkit-scrollbar-thumb {
+    --tw-border-opacity: 1;
+    background-color: hsla(0, 0%, 89%, .8);
+    border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+    border-radius: 9999px;
+    border-width: 1px
+}
+
+::-webkit-scrollbar-thumb:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgba(227, 227, 227, var(--tw-bg-opacity))
+}
+
+.dark ::-webkit-scrollbar-thumb {
+    background-color: hsla(0, 0%, 100%, .1)
+}
+
+.dark ::-webkit-scrollbar-thumb:hover {
+    background-color: hsla(0, 0%, 100%, .3)
+}
+
+@media (min-width: 768px) {
+    .scrollbar-trigger ::-webkit-scrollbar-thumb {
+        visibility: hidden
+    }
+
+    .scrollbar-trigger:hover ::-webkit-scrollbar-thumb {
+        visibility: visible
+    }
+}
+
 .nav-link {
     font-size: .95rem;
 }
